Apply suggestions from code review

--- a/public/app/plugins/datasource/mssql/partials/config.html
+++ b/public/app/plugins/datasource/mssql/partials/config.html
@@ -1,5 +1,5 @@
 
-<h3 class="page-heading">MS SQL connection (Support TLS/SSL)</h3>
+<h3 class="page-heading">MS SQL connection</h3>
 
 <div class="gf-form-group">
 	<div class="gf-form max-width-30">
