Dashboard: Set z-index of active panel to 999

--- a/public/sass/components/_dashboard_grid.scss
+++ b/public/sass/components/_dashboard_grid.scss
@@ -90,7 +90,8 @@
   &:hover,
   &:active,
   &:focus {
-    z-index: 100 !important;
+    // above other panels, but below lowest pre-defined index in zIndex.ts
+    z-index: 999 !important;
   }
 }
 
