--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -46,6 +46,7 @@
   padding: $panel-padding;
   width: 100%;
   flex-grow: 1;
+  contain: size layout;
   height: calc(100% - #{$panel-header-height});
 
   &--no-padding {
